# see-aug

./: .gitattributes  .gitmodules  Cargo.toml  convert_mrs_to_zip.sh  readme.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml
crates/mr-imp/: Bourree_annotated.mrs  Cargo.toml  Menuet.mrs
crates/mr-imp/src/: lib.rs
mr-imp/: Bourree.mrs  Cargo.toml
mr-imp/src/: lib.rs
src/: annotations.rs  drawing.rs  main.rs  page_rendering.rs  settings.rs
