[package]
name = "see-aug"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["mr-imp"]

[workspace.dependencies]
freya = { version = "0.1.8", features = ["devtools", "log"] }
# Use the same version as Freya for all of these:
log = "*"
tokio = "*"

# Utils
image = "0.24"

[dependencies]
freya = { workspace = true }
# Use the same version as Freya for all of these:
dioxus = { version = "*", features = ["macro", "hooks"] }
dioxus-std = { version = "*", features = ["utils"] }
skia-safe = "*"
log = { workspace = true }
tokio = { workspace = true }

# Utils
arc-swap = "1.6.0"
boxcar = "0.2.4"
image = { workspace = true }


[profile.dev]
opt-level = 1
