[package]
name = "see-aug"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*", "crates/mr-imp/vend/rs-async-mrs"]

[workspace.dependencies]
freya = { version = "0.1.8", features = ["devtools", "log"] }
# Use the same version as Freya for all of these:
log = "*"
tokio = "*"

# Utils
async_zip = "0.0.16"
image = "0.24"
serde = { version = "1", features = ["derive"] }

[dependencies]
mr-imp = { package = "see-aug-mr-imp", path = "crates/mr-imp" }

freya = { workspace = true }
# Use the same version as Freya for all of these:
dioxus = { version = "*", features = ["macro", "hooks"] }
dioxus-std = { version = "*", features = ["utils"] }
skia-safe = "*"
log = { workspace = true }
tokio = { workspace = true }

# Utils
arc-swap = "1.6.0"
boxcar = "0.2.4"
image = { workspace = true }


[profile.dev]
opt-level = 1
