[package]
name = "see-aug-mr-imp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_mrs = { path = "vend/rs-async-mrs", features = ["tokio", "tokio-fs", "deflate"] }
glob = "0.3.1"
image = { workspace = true }
log = { workspace = true }
quick-xml = { version = "0.31.0", features = ["serialize", "async-tokio"] }
tokio = { workspace = true, features = ["fs"] }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
test-log = "0.2.14"
